# Reparo

./: .gitignore  CMakeLists.txt  Directory.build.props  LICENSE.txt  README.md  Reparo.exp  Reparo.lib  config.json  imgui.ini  main.cpp  template.json  tracked_changes.txt
database/: metadata
database/reports/: 06e2d4d7-3f8c-4041-8688-3b795741bffd.dmp  0cd0bf70-5d40-4878-88bd-8a5ed53e3bef.dmp  12235358-aa57-4f6c-90cd-7aacc4b0125a.dmp  1944d788-2bcb-406f-9ba2-d928fc5cf5be.dmp  2dca00b9-5caf-4f48-8c91-a4091e1710ba.dmp  2ffee954-fc5d-40a7-bf6f-653156882be3.dmp  316a1ef5-b572-4734-b79f-0f2b4f7b46f6.dmp  320f5fcb-878a-485b-b668-3f848fb64033.dmp  37d4cce9-3707-4482-a73a-c13e69800cfe.dmp  3defee60-5928-4560-95da-ee5817889d53.dmp  5540fafa-7895-41d2-bcd9-b4b7434c3fb5.dmp  57dc987a-d93c-4eed-bf12-f348dc40e4ef.dmp  58f3adaf-7bff-4c74-8e67-b99cb76b7494.dmp  5940980a-63ea-4851-b372-9bc69110258d.dmp  5d2b5134-facd-4b21-af18-98d3add2011c.dmp  5f8e62e7-2719-46d1-91ce-e44872772257.dmp  68229188-0e2e-4cac-9521-2b915076e243.dmp  6a229987-6d89-4e65-8ee6-5f4057e2edce.dmp  6a8e4a8f-d013-4e50-93af-ab3d7f999be4.dmp  6e07ca49-7586-4ce1-bd5c-c32df172a9e0.dmp  7246b360-4c70-42e0-8046-975fe7c2739c.dmp  72c81b6f-0064-4b0b-9659-7b976c9b5f4e.dmp  730a37c9-bad7-4c11-88db-afd3d0706df1.dmp  7472fdba-8998-4308-bea5-1735336c3d27.dmp  7a00e13a-9a97-4a37-9876-0b58380466fa.dmp  826effc3-e4f2-4ff4-8a5a-50cbc5148c99.dmp  870e92be-9fd9-4046-a17f-e60e7a024e90.dmp  a31ffdef-3072-414d-90c8-ff1308598789.dmp  b2d50f21-165d-4e62-a754-b0e643e430ac.dmp  b43e5d01-2d96-42cf-9956-f09a53996d2e.dmp  b60f8ac5-b398-4d05-bc1a-3864594821af.dmp  b7e3d804-b434-48e3-90a9-7fd4536a94b8.dmp  c1841d95-07f9-42d5-baba-cc61f962e799.dmp  c7ccb691-4a5b-4945-94d1-0bfc3867f886.dmp  cd478962-d80d-477b-a462-b529aedc0b2a.dmp  dfea50b8-821e-4028-a1d1-f3f181e87883.dmp  e3c2af3e-f440-412d-b53f-8c040d630a37.dmp  e91783b7-465c-456f-92a5-51e3862e30f2.dmp  ec17a266-3bea-4669-81a5-a3fcbbf83baa.dmp  edb7ee71-b672-4c9c-9211-fd0677d56541.dmp  (+2 more)
resource/: config.json  parts_stock - Copy (2).db  parts_stock - Copy.db  parts_stock.db  template.json
src/: LocStrings.h  RoBarcode.cpp  RoBarcode.h  RoImage.cpp  RoImage.h  RoLocalization.cpp  RoLocalization.h  attributes.h  base_window.cpp  base_window.h  buttons.cpp  buttons.h  combo.h  conversion.cpp  conversion.h  database.cpp  database.h  debug.h  filters.cpp  filters.h  imgui_ex.h  imguidatechooser.cpp  imguidatechooser.h  invoices.cpp  invoices.h  menu_bar.cpp  menu_bar.h  modal.cpp  modal.h  observer.h  queries.cpp  queries.h  reparo_core.cpp  reparo_core.h  reparo_windows.cpp  reparo_windows.h  soci_type_conversion_helpers.h  tables.cpp  tables.h  text_fields.cpp  (+5 more)
src/models/: address.cpp  address.h  alias.cpp  alias.h  customer.cpp  customer.h  device.cpp  device.h  device_color.cpp  device_color.h  link_models.h  model_handler.h  parts.cpp  parts.h  repair.cpp  repair.h  simple_models.cpp  simple_models.h  supplier.cpp  supplier.h
